# ner-ocr

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  config.yaml  entities.yaml  mkdocs.yml  pyproject.toml  requirements-docker.txt  requirements.txt
data/output/: sd19_res.json
exploration/: paddle_test.ipynb  survey_test.ipynb
scripts/: entrypoint.py  run_ui.py
src/: bounding_box.py  bounding_box_utils.py  config.py  custom_types.py  entities.py  entity_builder.py  entity_extraction.py  exceptions.py  image_processing.py  pdf_processing.py  pipeline.py  pipeline_entity_extraction.py  pipeline_ocr.py  rpa.py  transformer_ocr.py  utils.py
src/custom_types/: __init__.py  base.py  data.py  enums.py
src/ner_ocr/: __init__.py
src/ner_ocr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pipelines/: __init__.py  base.py  entity.py  ocr.py
src/types/: base.py  data.py  enums.py
src/ui/: __init__.py  app.py  components.py  state.py  visualisation.py
