# ---------------------------------------------------------------------
# DEPENDENCY GROUPS
# ---------------------------------------------------------------------
# Usage:
# Local Mac (CPU):     uv sync                    (uses default groups)
# Local Mac (MPS):     uv sync                    (same, MPS auto-detected)
# Docker Dev (CPU):    Install from requirements-docker.txt
# Docker TRE (GPU):    Install from requirements-docker.txt + CUDA wheels
#
# Export for Docker (excludes torch/paddle - installed separately):
# uv export --no-group base --no-group dev -o requirements-docker.txt

[dependency-groups]
# Base ML dependencies - installed differently per environment
# For local dev: uv will install CPU versions automatically
base = [
    "accelerate>=1.12.0",
    "paddlepaddle>=3.0.0", # CPU version, works on Mac
    "torch>=2.5.0", # uv will pick appropriate version for platform
    "torchvision>=0.20.0",
]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[project]
authors = [
    {email = "mack.nixon@ucl.ac.uk", name = "Mack Nixon"},
]
dependencies = [
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gradio>=5.0.0",
    "ipython>=9.6.0",
    "langchain-core>=1.0.5",
    "levenshtein>=0.27.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.1",
    "pdf2image>=1.17.0",
    "pyaml>=25.7.0",
    "pydantic>=2.12.3",
    "pypdfium2>=5.0.0",
    "setuptools>=80.9.0",
    "transformers>=4.57.1",
    "types-pyyaml>=6.0.12.20250915",
]
description = "Tool for extracting ner data from hand written forms using ocr/llms"
name = "ner-ocr"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "loguru.*"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["app/migrations/versions/*.py", "docs/*.py"]
fix = true
force-exclude = true
target-version = "py313"
lint.ignore = [
    "ANN003", # kwargs type annotation required
    "ANN401", # Any in *args/**kwargs (appropriate for generic wrappers)
    "ARG002", # kwargs unused
    "COM812", # trailing commas (ruff-format recommended)
    "D104", # module docstring
    "D203", # no-blank-line-before-class
    "D205", # missing-blank-line-after-summary
    "D212", # multi-line-summary-first-line
    "D403", # forcing upper-case
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "E501", # let's keep this for now (long lines)
    "ERA001", # allow commented code -- FOR NOW!
    "FIX002", # implicit trust that TODOs are not trivial, or else they would be fixed
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
    "RUF012", # where ruff wants type annotations using ClassVar for subclasses - mypy doesnt care, so why would we?
    "TC002", # Move third-party import into type-checking block (often used at runtime)
    "TD002", # name for TO DO
    "TD003", # pedantic issue number requester in to dos
]
lint.per-file-ignores = {"src/ui/app.py" = [
    "B008", # Function call in default argument (gr.Progress pattern)
    "BLE001", # Blind exception (UI needs graceful error handling)
    "FBT001", # Boolean positional argument (Gradio event handlers)
    "FBT002", # Boolean default argument (Gradio event handlers)
    "PLR0913", # Too many arguments (Gradio event handlers need many inputs)
    "PLR0915", # Too many statements (UI builder functions are large)
    "PLW0603", # Global statement (lazy-loading pattern for models)
    "S104", # Binding to all interfaces (intentional for Docker)
    "SIM117", # Nested with statements (Gradio UI pattern)
], "src/ui/visualisation.py" = [
    "PLR0912", # Too many branches (entity rendering has many field checks)
], "tests*" = [
    "ANN001", # No return type annotation
    "ANN201", # No return type annotation
    "ARG001", # Unused function argument
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "INP001", # File is part of an implicit namespace package.
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected,
    "SLF001", # accessing private members
]}
lint.select = ["ALL"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
